# newcashflow-agent

./: .gitignore  ANNOUNCEMENT.md  DEMO_PROMPTS.txt  DEMO_PROMPTS_OPERA.txt  DEMO_SCRIPT.md  Dockerfile  ONE_PAGER.md  README.md  cashflow_mcp_server.py  claude_desktop_config.json  opera_client.py  planning_client.py  pyproject.toml  requirements.txt  server_http.py
data/: actuals_2025-01-15.json  forecast_2025-01-15_2025-01-17.json  forecast_2026-01-15_2026-01-22.json  forecast_2026-01-15_2026-01-31.json  forecast_2026-01-15_2026-02-14.json  forecast_2026-01-16_2026-01-31.json  hotel_config.json  opera_mock_rates.json  opera_sync_2026-01-16_2026-02-15.json  opera_sync_2026-01-20_2026-01-25.json  planning_sync_2025-06-01_2025-06-30.json  planning_sync_2025-06-01_2025-12-31.json  planning_sync_2026-01-01_2026-03-31.json  planning_sync_2026-02-01_2026-04-30.json  pricing_2026-01-15_2026-01-29.json  pricing_2026-01-16_2026-01-18.json  pricing_2026-01-20_2026-01-25.json  report_2026-01-15_2026-01-29.csv  report_2026-01-15_2026-01-31.csv  report_2026-01-16_2026-02-15.csv  scenario_20%_Occupancy_Drop.json  scenario_Low_Occupancy.json  scenario_Low_Season_February.json  scenario_Optimistic_-_High_Occupancy.json  scenario_Pessimistic_-_Low_Season.json  scenario_Recession_Scenario.json  scenario_Stress_Test_-_Expense_Spike.json
