[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow-mcp-server"
version = "1.0.0"
description = "Hotel Daily Cash Flow Forecasting MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cashflow-mcp = "cashflow_mcp_server:main"
